apps/profiles/upstream/overlays/kubeflow/virtual-service.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: profiles-kfam
spec:
  parentRefs:
  - name: kubeflow-gateway
    namespace: kubeflow
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /kfam/
    filters:
    - type: RequestHeaderModifier
      requestHeaderModifier:
        add:
        - name: x-forwarded-prefix
          value: /kfam
    - type: URLRewrite
      urlRewrite:
        path:
          type: ReplacePrefixMatch
          replacePrefixMatch: /kfam/
    backendRefs:
    - name: profiles-kfam
      port: 8081
